--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,11 @@
   </head>
 
   <body>
-    <%= render 'layouts/messages' %>
-    <div class="container">
-      <%= yield %>
-    </div>
+    <%= render 'layouts/navigation' %>
+      <%= render 'layouts/messages' %>
+      <div class="container">
+        <%= yield %>
+      </div>
+      <%= render 'layouts/footer' %>
   </body>
 </html>
