--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,21 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-footer {
-  border-top: 1px solid #eaeaea;
-}
-
-footer .small {
-  float: left;
-  padding-top: 10px;
-}
-
-footer ul li {
-  float: right;
-  list-style: none;
-  margin-left: 15px;
-}
-
 .article-actions {
   border-top: 1px solid #EAEAEA;
   padding-top: 5px;
@@ -34,4 +19,54 @@ footer ul li {
   border-top: 1px solid #EAEAEA;
   padding-top: 15px;
   padding-bottom: 15px;
+}
+
+.center {
+  text-align: center;
+}
+
+.jumbotron {
+  background: url('bg.png');
+  background-size: cover;
+  height: 600px;
+}
+
+.jumbotron h1 {
+  color: #fff;
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
+
+.btn-xlarge {
+  font-size: 1.7em;
+  background-color: #FFE233;
+  color: #000;
+  border: 0;
+}
+
+footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid #EAEAEA;
+  color: #777;
+}
+
+footer a:hover {
+  color: #222;
+}
+
+footer .small {
+  float: left;
+}
+
+footer ul {
+  float: right;
+  list-style: none;
+}
+
+footer ul li {
+  float: left;
+  margin-left: 15px;
 }
