--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,13 @@
 <div class="container">
   <footer class="footer">
-    <small>Copyright &copy; <a href="#">Blog</a></small>
-    <ul>
-      <li><a href="#">Link</a></li>
-      <li><a href="#">Link</a></li>
-      <li><a href="#">Link</a></li>
-    </ul>
+    <small>
+      Copyright &copy; <a href="#">Blog</a>
+    </small>
+    <nav>
+      <ul>
+        <li><%= link_to "Help", help_path %></li>
+        <li><%= link_to "About", about_path %></li>
+      </ul>
+    </nav>
   </footer>
 </div>
